--- a/_posts/2018-08-09-jekyll.md
+++ b/_posts/2018-08-09-jekyll.md
@@ -8,13 +8,18 @@ date: 2018-08-09 17:55 +0800
 
 官方给的hello world比较简单，jekyll的命令也比较简单，简单是一个非常好的特性，但是作为一个懒癌患者，不能一个命令新建文章，这个还是有点不习惯，所以就找到了[Jekyll::Compose](https://github.com/jekyll/jekyll-compose)插件。安装之后新增了几个命令主要是文章新建、发布相关的，非常实用。
 
-### 安装方式
-在博客根路径下找到```Gemfile```，在文件末尾增加一行：
+---
+
+#### 创建新文章
+
+*jekyll* 以插件的形式支持了类似于 `jekyll post "${new_post_name}"` 的命令的支持, 配置之后就可以在命令行直接新建 *post* .
+
+在博客根路径下找到 `Gemfile`，在文件末尾增加一行：
 
 ```
 gem 'jekyll-compose', group: [:jekyll_plugins]
 ```
-并且执行```bundle```命令. 新增的命令有这些:
+并且执行 `bundle` 命令. 新增的命令有这些:
 
 ```
   draft                 Creates a new draft post with the given NAME
@@ -24,3 +29,46 @@ gem 'jekyll-compose', group: [:jekyll_plugins]
   page                  Creates a new page with the given NAME
 ```
 之后就可以这样新建文章了: ```jekyll post "hello world"```
+
+---
+
+#### 修改模板
+
+*Jekyll* 默认配置了 *minima* 主题, 风格简约不花哨, 用来写技术博客还是比较舒畅的, 但是有很多地方需要调整, 这个是有就需要对 *theme* 进行覆盖(overwrite).
+
+*minima* 模板在 `ls $(bundle show minima)` 可以看到所有的模板文件, 考本大本地进行调整就可以完成主体的配置与研发.
+
+比如想要去掉底部的 *header*, 需要编辑 `_includes/footer.html`:
+```html
+<footer class="site-footer h-card">
+  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+  <div class="wrapper">
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+          <li class="p-name">
+            {%- if site.author -%}
+              {{ site.author | escape }}
+            {%- else -%}
+              {{ site.title | escape }}
+            {%- endif -%}
+            </li>
+            {%- if site.email -%}
+            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {%- endif -%}
+        </ul>
+      </div>
+      <div class="footer-col footer-col-2">
+        {%- include social.html -%}
+      </div>
+      <div class="footer-col footer-col-3">
+        <p>{{- site.description | escape -}}</p>
+      </div>
+    </div>
+  </div>
+</footer>
+
+```
+
