--- a/_posts/2018-08-09-jekyll.md
+++ b/_posts/2018-08-09-jekyll.md
@@ -1,8 +1,18 @@
 ---
 layout: post
-title: Jekyll
+title: Jekyll 使用技巧
 date: 2018-08-08 17:55 +0800
+tags: [writing]
 ---
+
+<!-- TOC -->
+
+- [jekyll-compose](#jekyll-compose)
+    - [创建新文章](#创建新文章)
+    - [使用](#使用)
+- [修改jekyll模板](#修改jekyll模板)
+
+<!-- /TOC -->
 
 之前用过hexo，发布起来感觉有点绕，同时因为每次都需要构建前端的html、css、js，git history 根本不能看，然后就发现了jekyll，git pages官方支持，然后 [hexo](https://hexo.io/) 就没有然后了，之前的文章有时间再捞回来。
 
@@ -12,7 +22,7 @@ date: 2018-08-08 17:55 +0800
 
 ## jekyll-compose
 
-#### 创建新文章
+### 创建新文章
 
 *jekyll* 以插件的形式支持了类似于 `jekyll post "${new_post_name}"` 的命令的支持, 配置之后就可以在命令行直接新建 *post* .
 
@@ -37,7 +47,7 @@ gem 'jekyll-compose', group: [:jekyll_plugins]
 
 ---
 
-#### 修改模板
+## 修改jekyll模板
 
 *Jekyll* 默认配置了 *minima* 主题, 风格简约不花哨, 用来写技术博客还是比较舒畅的, 但是有很多地方需要调整, 这个是有就需要对 *theme* 进行覆盖(overwrite).
 
